--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dom-to-image": "^2.6.0",
     "electron-is-dev": "^1.1.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
+    "react-draggable": "^4.2.0",
+    "react-feather": "^2.0.3",
+    "react-input-range": "^1.3.0",
+    "react-powerplug": "^1.0.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
